Fixed overflow issue in user list

--- a/wcfsetup/install/files/style/user.less
+++ b/wcfsetup/install/files/style/user.less
@@ -58,6 +58,10 @@
 	> .containerHeadline > p {
 		margin-bottom: 2px;
 	}
+	
+	> .userFacts {
+		overflow: hidden;
+	}
 }
 
 .userTitleBadge {
